17956
Using case classes with a pattern __match on a monad other than option generates weird error messages.

{code}
trait ListMatcher {
  object __match {
    def one[T](x: T): List[T] = List(x)
    def zero = Nil
    def guard[T](cond: Boolean, result: => T): List[T] =
      if (cond) one(result) else zero
    def runOrElse[T, U](in: T)(matcher: T => List[U]): List[U] =
      matcher(in)
  }

  def infix_orElse[A](lst: List[A], alternative: => List[A]): List[A] =
    lst ++ alternative

  case class Yo(x: Int)
}
{code}

Compiling this snippet with -Xexperimental generates the type error:
{noformat}
files/run/virtpatmat_virtcase.scala:14: error: type mismatch;
 found   : PartialFunction[Int,Int]
 required: List[?]
  case class Yo(x: Int)
             ^
one error found
{noformat}

With the quick fix from SI-7076, the error message is:
{noformat}
files/run/virtpatmat_virtcase.scala:14: error: type mismatch;
 found   : List[Int]
 required: Int
  case class Yo(x: Int)
             ^
one error found
{noformat}
